tui_err.txt
cargo : warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
At line:1 char:1
+ cargo check -p foot-info-tui --tests 2>&1 | Out-File -Encoding utf8 t ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: profil...workspace root::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
package:   C:\Dev\Perso\foot-info\tui\Cargo.toml
workspace: C:\Dev\Perso\foot-info\Cargo.toml
    Checking foot-info-tui v0.1.1 (C:\Dev\Perso\foot-info\tui)
error[E0583]: file not found for module `error`
 --> tui\src\lib.rs:3:1
  |
3 | pub mod error;
  | ^^^^^^^^^^^^^^
  |
  = help: to create the module `error`, create file "tui\src\error.rs" or "tui\src\error\mod.rs"
  = note: if there is a `mod error` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `providers`
 --> tui\src\lib.rs:6:1
  |
6 | pub mod providers;
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `providers`, create file "tui\src\providers.rs" or "tui\src\providers\mod.rs"
  = note: if there is a `mod providers` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `user`
 --> tui\src\lib.rs:9:1
  |
9 | pub mod user;
  | ^^^^^^^^^^^^^
  |
  = help: to create the module `user`, create file "tui\src\user.rs" or "tui\src\user\mod.rs"
  = note: if there is a `mod user` elsewhere in the crate already, import it with `use crate::...` instead

error[E0412]: cannot find type `ViewMode` in this scope
  --> tui\src\state.rs:19:20
   |
19 |     pub view_mode: ViewMode,
   |                    ^^^^^^^^ not found in this scope
   |
help: consider importing this enum
   |
 1 + use crate::models::ViewMode;
   |

error[E0433]: failed to resolve: use of undeclared type `ViewMode`
  --> tui\src\state.rs:37:24
   |
37 |             view_mode: ViewMode::Search,
   |                        ^^^^^^^^ use of undeclared type `ViewMode`
   |
help: consider importing this enum
   |
 1 + use crate::models::ViewMode;
   |

warning: unused import: `foot_info_core::providers::FootballProvider`
 --> tui\src\state.rs:4:5
  |
4 | use foot_info_core::providers::FootballProvider;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::sync::Arc`
 --> tui\src\state.rs:5:5
  |
5 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_json`
  --> tui\src\config.rs:16:41
   |
16 |                     if let Ok(config) = serde_json::from_str(&content) {
   |                                         ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde_json`
  --> tui\src\config.rs:30:27
   |
30 |             let content = serde_json::to_string_pretty(self)?;
   |                           ^^^^^^^^^^ use of unresolved module or unlinked crate `serde_json`
   |
   = help: if you wanted to use a crate named `serde_json`, use `cargo add serde_json` to add it to your `Cargo.toml`

error[E0609]: no field `providers` on type `&mut AppState`
  --> tui\src\handlers\mod.rs:31:60
   |
31 |                 (state.current_provider_index + 1) % state.providers.len();
   |                                                            ^^^^^^^^^ unknown field
   |
   = note: available fields are: `search_input`, `matches`, `error_message`, `status_message`, `is_loading` ... and 7 
others

error[E0599]: no method named `get_current_provider` found for mutable reference `&mut AppState` in the current scope
  --> tui\src\handlers\mod.rs:32:34
   |
32 |             let provider = state.get_current_provider();
   |                                  ^^^^^^^^^^^^^^^^^^^^ method not found in `&mut AppState`

error[E0599]: no method named `get_current_provider` found for reference `&AppState` in the current scope
  --> tui\src\ui\render.rs:79:32
   |
79 |     let current_provider = app.get_current_provider();
   |                                ^^^^^^^^^^^^^^^^^^^^ method not found in `&AppState`

Some errors have detailed explanations: E0412, E0433, E0583, E0599, E0609.
For more information about an error, try `rustc --explain E0412`.
warning: `foot-info-tui` (lib) generated 2 warnings (2 duplicates)
error: could not compile `foot-info-tui` (lib) due to 10 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `foot-info-tui` (lib test) generated 2 warnings
error: could not compile `foot-info-tui` (lib test) due to 10 previous errors; 2 warnings emitted
